tests/negative/test_decl_name_taken.orb
fnc main() () {
    let x:i32;
    let (x:ptr null);
};